2012-04-02  David S. Miller  <davem@davemloft.net>

	With help from Paul Eggert, Carlos O'Donell, and Roland McGrath.
	* stdio-common/printf-parse.h (read_int): Change return type to
	'int', return -1 on INT_MAX overflow.
	* stdio-common/vfprintf.c (vfprintf): Validate width and precision
	against overflow of INT_MAX.  Set errno to EOVERFLOW when 'done'
	overflows INT_MAX.  Check for overflow of in-format-string precision
	values properly.  Use EOVERFLOW rather than ERANGE throughout.  Use
	SIZE_MAX not INT_MAX for integer overflow test.
	* stdio-common/printf-parsemb.c: If read_int signals an overflow,
	skip the construct in the format string but do not record anything.
	* stdio-common/bug22.c: Adjust to test both width/prevision
	INT_MAX overflow as well as total length INT_MAX overflow.  Check
	explicitly for proper errno values.

2012-04-02  Thomas Schwinge  <thomas@codesourcery.com>

	* string/test-memcmp.c [! WIDE]: #include <limits.h> for CHAR_MIN,
	CHAR_MAX.
	* string/test-strcmp.c [! WIDE]: Likewise.
	* time/tst-mktime2.c: Likewise for INT_MAX.
	* string/test-string.h: #include <sys/param.h> for MIN.

	* csu/init-first.c (__libc_init_first): Call __ctype_init.
	* sysdeps/i386/init-first.c (init): Likewise.
	* sysdeps/mach/hurd/i386/init-first.c (posixland_init): Likewise.
	* sysdeps/mach/hurd/powerpc/init-first.c (posixland_init): Likewise.
	* sysdeps/sh/init-first.c (init): Likewise.

2012-04-01  Ulrich Drepper  <drepper@gmail.com>

	* po/ru.po: Update from translation team.
	* po/vi.po: Likewise.

2012-03-31  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* resolv/nss_dns/dns-host.c: Merge copyright years.

2012-03-22  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/i386/i686/multiarch/memcpy-ssse3.S: Update.
	Optimize memcpy with prefetch if
	DATA_CACHE_SIZE_HALF <= len <  SHARED_CACHE_SIZE_HALF and
	src, dst pointers have unequal 16 byte alignments.

2012-03-30  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #13928]