@@ -378,8 +378,9 @@ static const struct
     /* Determine whether there is a buffered character pending.  */	      \
     last_ch = *statep >> 3;						      \
 									      \
-    /* We have to buffer ch if it is a possible match in comp_table_data.  */ \
-    must_buffer_ch = last_ch && (ch >= 0x0041 && ch <= 0x01b0);		      \
+    /* We have to buffer ch if it is a possible match in comp_table_data      \
+       and if it isn't the last char of the string.  */			      \
+    must_buffer_ch = (ch >= 0x0041 && ch <= 0x01b0) && (inptr + 1 != inend);  \
 									      \
     if (last_ch)							      \
       {									      \
